--- a/views/admin/edit_products.ejs
+++ b/views/admin/edit_products.ejs
@@ -63,7 +63,7 @@
           />
         </div>
         <!-- Quantity -->
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label>Quantity</label>
           <input
             type="number"
@@ -73,7 +73,7 @@
             value="<%=quantity%>"
             required
           />
-        </div>
+        </div> -->
         <!-- Category -->
         <div class="form-group">
           <label>Category</label>
