--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,9 +4,9 @@
             <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
                 <div class="block-7">
                     <h3 class="footer-heading mb-4">About <strong class="text-primary">Pharmative</strong></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio
-                        voluptates
-                        sed dolorum excepturi iure eaque, aut unde.</p>
+                    <p>Helping patients get the medications they need.Some patients require specialty drugs for chronic or
+                        complex conditions. The network specialty pharmacy can dispense these drugs quickly and at a
+                        reasonable cost.</p>
                 </div>
             </div>
             <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
@@ -23,8 +23,8 @@
                     <h3 class="footer-heading mb-4">Contact Info</h3>
                     <ul class="list-unstyled">
                         <li class="address">Nav Shakti Nagar,Adrash Nagar,Andheri West,Mumbai-400069,Maharashtra</li>
-                        <li class="phone"><a href="tel://8454982994">+91 8454982994</a></li>
-                        <li class="email"><a href="#">example@gmail.com</a></li>
+                        <li class="phone"><a href="tel://9004369773">+91 90043 69773</a></li>
+                        <li class="email"><a href="mailto:medibox@gmail.com">medibox@gmail.com</a></li>
                     </ul>
                 </div>
             </div>
@@ -32,7 +32,6 @@
         <div class="row pt-5 mt-5 text-center">
             <div class="col-md-12">
                 <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>
                         document.write(new Date().getFullYear());
