--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,9 +1,9 @@
 <%- include ("./../partials/adminHeader") %>
 <div class="container"><%- include ("./../partials/messages") %></div>
 <div class="container table-responsive">
-  <h3 class="page-title">Residential Property</h3>
+  <h3 class="page-title">All Products</h3>
   <a href="/admin/products/add-products" class="btn btn-primary"
-    >Add Property</a
+    >Add Products</a
   >
   <br /><br />
   <table class="table table-hover propertyList">
@@ -12,7 +12,6 @@
         <th scope="col">Product</th>
         <th scope="col">Price</th>
         <th scope="col">Category</th>
-        <th scope="col">Quantity</th>
         <th scope="col">Image</th>
         <th scope="col">Action</th>
       </tr>
@@ -23,7 +22,6 @@
         <td><%=product.title%></td>
         <td>&#8377;<%=product.price%></td>
         <td><%=product.category%></td>
-        <td><%=product.quantity%></td>
         <td>
           <%if(product.avatar===''){%>
           <img id="noimage" src="/images/noimage.png" />
