--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -9,27 +9,33 @@
     </div>
   </div>
 </div>
-<div class="site-blocks-cover overlay "
-  style="background-image: url('images/hero_bg_2.jpg');">
+<div
+  class="site-blocks-cover overlay"
+  style="background-image: url('images/hero_bg_2.jpg')"
+>
   <div class="container">
     <div class="row">
       <div class="col-lg-12 mx-auto align-self-center">
         <div class="site-block-cover-content text-center">
-          <h1 class="mb-0">About <strong class="text-primary">Pharmative</strong></h1>
+          <h1 class="mb-0">
+            About <strong class="text-primary">Pharmative</strong>
+          </h1>
           <div class="row justify-content-center mb-5">
             <div class="col-lg-6 text-center">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ex perspiciatis non quibusdam vel
-                quidem.</p>
+              <p>
+                Helping patients get the medications they need.Some patients
+                require specialty drugs for chronic or complex conditions. The
+                network specialty pharmacy can dispense these drugs quickly and
+                at a reasonable cost.
+              </p>
             </div>
           </div>
-          <p><a href="/shop"
-              class="btn btn-primary px-5 py-3">Shop Now</a></p>
+          <p><a href="/shop" class="btn btn-primary px-5 py-3">Shop Now</a></p>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 
 <!-- <div class="site-section py-5"
   data-aos="fade">
@@ -176,44 +182,59 @@
   </div>
 </div> -->
 
-<div class="site-section site-section-sm site-blocks-1 border-0"
-  data-aos="fade">
+<div
+  class="site-section site-section-sm site-blocks-1 border-0"
+  data-aos="fade"
+>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4"
+      <div
+        class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4"
         data-aos="fade-up"
-        data-aos-delay="">
+        data-aos-delay=""
+      >
         <div class="icon mr-4 align-self-start">
           <span class="icon-truck text-primary"></span>
         </div>
         <div class="text">
           <h2>Free Shipping</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-            tincidunt fringilla.</p>
+          <p>
+            Some patients require specialty drugs for chronic or complex
+            conditions. The network specialty pharmacy can dispense these drugs
+            quickly and at a reasonable cost.
+          </p>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4"
+      <div
+        class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4"
         data-aos="fade-up"
-        data-aos-delay="100">
+        data-aos-delay="100"
+      >
         <div class="icon mr-4 align-self-start">
           <span class="icon-refresh2 text-primary"></span>
         </div>
         <div class="text">
           <h2>Free Returns</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-            tincidunt fringilla.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            at iaculis quam. Integer accumsan tincidunt fringilla.
+          </p>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4"
+      <div
+        class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4"
         data-aos="fade-up"
-        data-aos-delay="200">
+        data-aos-delay="200"
+      >
         <div class="icon mr-4 align-self-start">
           <span class="icon-help text-primary"></span>
         </div>
         <div class="text">
           <h2>Customer Support</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
-            tincidunt fringilla.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            at iaculis quam. Integer accumsan tincidunt fringilla.
+          </p>
         </div>
       </div>
     </div>
